# FIFYard

./: .gitignore  Anchor.toml  README.md  vercel.json
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  players.ts  styles.css  vite-env.d.ts
frontend/src/components/: PlayerCard.tsx  PlayerEditor.tsx  PlayersPage.tsx  PredictionPanel.tsx  PredictionsPage.tsx  Sidebar.tsx  WalletButton.tsx
frontend/src/lib/: prediction.ts  solana.ts
programs/fifyard/: Cargo.toml
programs/fifyard/src/: lib.rs
