[package]
name = "fifyard"
version = "0.1.0"
description = "On-chain player ratings and fantasy squad formation for FIFYard"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fifyard"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token"] }
